--- a/lib/stylesheets/canon-bootstrap/_popover.scss
+++ b/lib/stylesheets/canon-bootstrap/_popover.scss
@@ -20,7 +20,7 @@
 }
 
 .popover-footer {
-  background-color: @popover-title-bg;
+  background-color: $popover-title-bg;
   border-top: 1px solid #E5E5E5;
   margin: 20px -20px -20px;
   padding: 10px 20px;
