--- a/lib/stylesheets/canon-bootstrap/_facet.scss
+++ b/lib/stylesheets/canon-bootstrap/_facet.scss
@@ -2,16 +2,16 @@
   background-color: transparent;
   border:0;
   border-radius: 0;
-  .box-shadow(0 0 0 0);
+  @include box-shadow(0 0 0 0);
 
 
   .panel-heading {
     border-bottom: 0;
     background:transparent;
-    .border-top-radius(0);
+    @include border-top-radius(0);
     padding:5px 0;
     text-transform:uppercase;
-    .h4;
+    @extend h4;
     margin:0;
   }
 
@@ -25,26 +25,26 @@
 
       //hover state
       &:hover {
-        background-color:@gray-lighter;
+        background-color:$gray-lighter;
       }
 
       //active state
       &.active {
-        background-color:@gray-lighter;
-        color:@gray-darker;
+        background-color:$gray-lighter;
+        color:$gray-darker;
         >.badge {
           color:#fff;
-          background:darken(@gray-lighter, 10%);
+          background:darken($gray-lighter, 10%);
         }
       }
 
       // remove rounding
       &:first-child {
-        .border-top-radius(0);
+        @include border-top-radius(0);
       }
       &:last-child {
         margin-bottom: 0;
-        .border-bottom-radius(0);
+        @include border-bottom-radius(0);
       }
 
     }
