--- a/lib/stylesheets/canon-bootstrap/_tabs.scss
+++ b/lib/stylesheets/canon-bootstrap/_tabs.scss
@@ -3,10 +3,10 @@
   > li {
     // default tab (inactive)
     > a {
-      background-color: @nav-tabs-link-bg;
-      border: 1px solid @nav-tabs-border-color;
+      background-color: $nav-tabs-link-bg;
+      border: 1px solid $nav-tabs-border-color;
       border-radius: 0;
-      color: @nav-tabs-link-color;
+      color: $nav-tabs-link-color;
       font-weight: bold;
       padding: 5px 10px;
       margin-right: -1px;
@@ -27,9 +27,9 @@
     // default tab (hover)
     > a:hover,
     > a:focus {
-      color: @nav-tabs-link-hover-color;
-      background-color: @nav-tabs-link-hover-bg;
-      border: 1px solid @nav-tabs-border-color;
+      color: $nav-tabs-link-hover-color;
+      background-color: $nav-tabs-link-hover-bg;
+      border: 1px solid $nav-tabs-border-color;
       cursor: pointer;
     }
 
@@ -38,9 +38,9 @@
       &,
       &:hover,
       &:focus {
-        color: @nav-tabs-active-link-color;
-        background-color: @nav-tabs-active-link-bg;
-        border: 1px solid @nav-tabs-border-color;
+        color: $nav-tabs-active-link-color;
+        background-color: $nav-tabs-active-link-bg;
+        border: 1px solid $nav-tabs-border-color;
         border-bottom-color: transparent;
         cursor: pointer;
       }
