feat(cascade): adds grey color for cascade hover

--- a/lib/stylesheets/canon/_settings.scss
+++ b/lib/stylesheets/canon/_settings.scss
@@ -12,6 +12,7 @@ $white: #fff;
 $grey50: #e7e7e7;
 $grey100: #d8d8d8;
 $grey150: #e1e1e1;
+$grey175: #f5f5f5;
 $grey200: #ddd;
 $grey250: #d3d3d3;
 $grey300: #ccc;
