--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/site.css">
   <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/syntax.css">
 
-  <script type="application/javascript" src="http://code.jquery.com/jquery-1.10.1.js"></script>
+  <script type="application/javascript" src="//code.jquery.com/jquery-1.10.1.js"></script>
   <script type="application/javascript" src="{{site.baseurl}}/assets/canon.min.js"></script>
   <script type="application/javascript" src="{{site.baseurl}}/js/bootstrap.min.js"></script>
   <script type="application/javascript" src="{{site.baseurl}}/js/site.js"></script>
