--- a/docs/_includes/embedded-table.html
+++ b/docs/_includes/embedded-table.html
@@ -1,4 +1,4 @@
-<table class="rs-list-table rs-embedded-list-table">
+<table class="rs-table rs-table-compact">
   <thead>
     <tr>
       <th class="rs-table-status"></th>
