--- a/docs/_includes/embedded-table-saved-images.html
+++ b/docs/_includes/embedded-table-saved-images.html
@@ -1,5 +1,5 @@
-<div class="rs-embedded-list-table-wrapper rs-embedded-small">
-  <table class="rs-list-table rs-embedded-list-table rs-select-table">
+<div class="rs-embedded-list-table-wrapper rs-embedded-medium">
+  <table class="rs-list-table rs-embedded-list-table rs-select-table rs-table-compact">
     <thead>
       <tr>
         <th class="rs-table-radio"></th>
