refactor(includes): adds new helix icon classes  tables and popover

--- a/docs/_includes/list-view-table-empty-state.html
+++ b/docs/_includes/list-view-table-empty-state.html
@@ -22,6 +22,8 @@
   <div class="rs-table-overlay-content">
     <div class="rs-table-overlay-title">You don't have any [product] yet.</div>
     <div class="rs-table-overlay-subtitle">Create one now.</div>
-    <div class="rs-table-overlay-message">An additional line to explain why this is useful and a link for more info. Learn more about <a href="javascript:void(0);">[product] <i class="rs-icon-external"></i></a></div>
+    <div class="rs-table-overlay-message">An additional line to explain why this 
+      is useful and a link for more info. Learn more about 
+      <a href="javascript:void(0);">[product] <i class="rs-icon-external"></i></a></div>
   </div>
 </div>
