--- a/docs/_includes/list-view-table-error-state.html
+++ b/docs/_includes/list-view-table-error-state.html
@@ -21,6 +21,9 @@
 </table>
 <div class="rs-table-overlay rs-table-overlay-error">
   <div class="rs-table-overlay-content">
-    <div class="rs-table-overlay-message"><i class="rs-icon-error-indicator"></i>This is an error message.</div>
+    <div class="rs-table-overlay-message">
+      <i class="rs-icon rs-icon-error-indicator"></i>
+      This is an error message.
+    </div>
   </div>
 </div>
