--- a/docs/_includes/popover-confirm-batch-delete.html
+++ b/docs/_includes/popover-confirm-batch-delete.html
@@ -5,7 +5,7 @@
 			<div class="rs-popover-body">
 				<p><strong>Permanently delete</strong> the following <span id="deletion-count">3</span> items?</p>
 				<div class="rs-embedded-list-table-wrapper rs-embedded-small" style="min-width: 350px;">
-					<table class="rs-list-table rs-embedded-list-table">
+					<table class="rs-list-table rs-embedded-list-table rs-table-compact">
 						<thead>
 							<tr>
 								<th>Item Name</th>
