--- a/docs/_includes/demos/secondary_nav.html
+++ b/docs/_includes/demos/secondary_nav.html
@@ -1,13 +1,7 @@
 <div class="rs-nav-secondary">
   <div class="rs-container">
-    <ul class="rs-nav">
-      <li class="active"><a href="{{ site.baseurl }}/demos/index.html">Servers</a></li>
-      <li><a href="">Load Balancers</a></li>
-      <li><a href="">DNS</a></li>
-      <li><a href="">Networks</a></li>
-      <li><a href="">Monitoring</a></li>
-      <li><a href="">Deployments</a></li>
-      <li><a href="{{ site.baseurl }}/demos/auto_scale_list.html">Auto Scale</a></li>
+    <ul class="rs-nav">{% for secondary_nav_item in site.data.primary-navigation.Monitoring.dropdown-sections.Monitoring.Monitors.secondary-nav %}
+      <li class="rs-nav-item{% if page.secondary == secondary_nav_item[0] %} active{% endif %}"><a class="rs-nav-link" href="{{ site.baseurl }}/demos/index.html">{{secondary_nav_item[0]}}</a></li>{% endfor %}
     </ul>
   </div>
 </div>
