refactor(includes demos): change utility to be YAML generated

--- a/docs/_includes/demos/utility_nav.html
+++ b/docs/_includes/demos/utility_nav.html
@@ -1,45 +1,22 @@
 <div class="rs-nav-utility">
   <div class="rs-container">
-    <ul class="rs-nav">
-      <li><a href="{{ site.baseurl }}/demos/index.html">MyRackspace</a></li>
-      <li class="active"><a href="{{ site.baseurl }}/demos/index.html">MyCloud</a></li>
-      <li><a href="{{ site.baseurl }}/demos/index.html">Private Cloud</a></li>
-      <li><a href="{{ site.baseurl }}/demos/index.html">Cloud Sites</a></li>
-    </ul>
-    <ul class="rs-nav rs-pull-right">
+    <div class="rs-nav-brand">
+      <a href="#"></a>
+    </div>{% for nav_hash in site.data.utility-navigation %}{% assign nav_position = nav_hash[0] %}{% assign items = nav_hash[1] %}
+    <ul class="rs-nav rs-pull-{{nav_position}}">{% for nav_item_hash in items %}{% assign nav_item = nav_item_hash[1]%}{% assign item_name = nav_item_hash[0]%}{% if nav_item.dropdown.size > 0 %}
       <li class="rs-dropdown rs-utility-dropdown">
-        <a class="rs-dropdown-toggle" href="javascript:void(0);">1-877-934-0407 (US) <i class="rs-caret"></i></a>
-        <ul class="rs-dropdown-menu">
-          <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">1-877-934-0407 (US)</a></li>
-          <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">0800-083-3012 (UK)</a></li>
-          <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">1800-727-145 (AU)</a></li>
-          <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">0800-445-997 (NZ)</a></li>
+        <a class="rs-dropdown-toggle" href="javascript:void(0);">{{item_name}} <i class="rs-caret"></i></a>
+        <ul class="rs-dropdown-menu">{% for dropdown_section_hash in nav_item.dropdown %}{% assign category_name = dropdown_section_hash[0]%}{% assign category_items = dropdown_section_hash[1]%}{% if category_name contains "none" %}{% else %}
+            <li class="rs-dropdown-item">
+              <span class="rs-dropdown-category" id="first">{{ category_name }}</span>
+            </li>{% endif %}{% for category_item_hash in category_items %}{% assign category_item_name = category_item_hash[0] %}{% assign category_item = category_item_hash[1] %}
+            <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="{{site.baseurl}}/{{category_item.url}}">{{ category_item_name }}</a></li>{% endfor %}{% if forloop.last == false %}
+            <li class="rs-divider"></li>{% endif %}{% endfor %}
         </ul>
-      </li>
-      <li><a href="">Live Chat</a></li>
-      <li class="rs-dropdown rs-utility-dropdown">
-        <a class="rs-dropdown-toggle" href="javascript:void(0);">Support <i class="rs-caret"></i></a>
-        <ul class="rs-dropdown-menu">
-          <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Support Tickets</a></li>
-          <li class="rs-divider"></li>
-          <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Knowledge Center <i class="rs-icon-external-dark"></i></a></li>
-          <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Cloud Community <i class="rs-icon-external-dark"></i></a></li>
-          <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">API Documentation <i class="rs-icon-external-dark"></i></a></li>
-          <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">System Status <i class="rs-icon-external-dark"></i></a></li>
-          <li class="rs-divider"></li>
-          <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Upgrade Support Level</a></li>
-        </ul>
-      </li>
-      <li class="rs-dropdown rs-utility-dropdown">
-        <a class="rs-dropdown-toggle" href="javascript:void(0);">Rusty Shackleford (#862323) <i class="rs-caret"></i></a>
-        <ul class="rs-dropdown-menu">
-          <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Billing &#38; Payments</a></li>
-          <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Usage Overview</a></li>
-          <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Account Settings</a></li>
-          <li class="rs-divider"></li>
-          <li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Log Out</a></li>
-        </ul>
-      </li>
-    </ul>
+      </li>{% else %}
+      <li class="rs-nav-item{% if page.utility == item_name %} active{% endif %}">
+        <a class="rs-nav-link" href="{{ site.baseurl }}/demos/{{ nav_item.url }}">{{item_name}}</a>
+      </li>{% endif %}{% endfor %}
+    </ul>{% endfor %}
   </div>
 </div>
