refactor(includes): adds proper cell classes to table examples

--- a/docs/_includes/table-form-elements.html
+++ b/docs/_includes/table-form-elements.html
@@ -19,19 +19,25 @@
       <td class="rs-table-delete"></td>
     </tr>
     <tr>
-      <td class="rs-table-input rs-input-medium"><input type="text" placehoder="Input" /></td>
+      <td class="rs-table-input rs-input-medium">
+        <input type="text" placehoder="Input" />
+      </td>
       <td class="rs-table-text">rs-table-input</td>
       <td class="rs-table-delete"></td>
     </tr>
     <tr>
-      <td class="rs-table-input rs-input-medium"><button type="button" class="rs-btn">Button</button></td>
+      <td class="rs-table-input rs-input-medium">
+        <button type="button" class="rs-btn">Button</button>
+      </td>
       <td class="rs-table-text">rs-table-input</td>
       <td class="rs-table-delete"></td>
     </tr>
     <tr>
       <td class="rs-table-input rs-input-medium"></td>
       <td class="rs-table-text">rs-table-delete</td>
-      <td class="rs-table-delete"><button type="button" class="rs-delete"></button></td>
+      <td class="rs-table-delete">
+        <button type="button" class="rs-delete"></button>
+      </td>
     </tr>
   </tbody>
 </table>
