refactor(includes): adds name attribute to radio buttons on table row selection example

--- a/docs/_includes/table-row-selection.html
+++ b/docs/_includes/table-row-selection.html
@@ -15,11 +15,11 @@
       <td class="rs-table-text">selected</td>
     </tr>
     <tr>
-      <td class="rs-table-checkbox"><input type="radio" /></td>
+      <td class="rs-table-checkbox"><input type="radio" name="radio-example" /></td>
       <td class="rs-table-text">none</td>
     </tr>
     <tr class="selected">
-      <td class="rs-table-radio"><input type="radio" checked="checked" /></td>
+      <td class="rs-table-radio"><input type="radio" name="radio-example" checked="checked" /></td>
       <td class="rs-table-text">selected</td>
     </tr>
   </tbody>
