--- a/lib/stylesheets/canon/_base.scss
+++ b/lib/stylesheets/canon/_base.scss
@@ -1,21 +1,22 @@
 body {
-  color: $grey600;
+  color: $grey900;
   font-family: $base-font-family;
   font-size: $base-font-size;
   line-height: $base-line-height;
+  font-weight: 400;
 }
 
 a {
-  color: $blue;
+  color: $cyan700;
   text-decoration: none;
 
   &:hover {
-    color: $blue;
+    color: $cyan500;
     text-decoration: underline;
   }
 
   &.disabled {
-    color: $grey300;
+    color: $grey500;
     cursor: default;
     text-decoration: none;
   }
@@ -32,55 +33,64 @@ strong {
 }
 
 p {
-  margin: 0 0 10px;
+  margin: 0 0 1.5em;
+  font-weight: 400;
 }
 
-h1, h2, h3, h4 {
-  font-family: $alt-font-family;
+.small {
+  font-size: 0.875em;
 }
 
-h1, h2, h3 {
-  font-weight: 600;
-  line-height: $base-line-height * 1.5;
+.extra-small {
+  font-size: 0.75em;
+  line-height: 1.4em
 }
 
-h4, h5, h6 {
-  margin: 0;
-}
-
-h5, h6 {
-  font-weight: bold;
+strong {
+  font-family: 'Roboto Medium';
+  font-weight: 500;
 }
 
 h1 {
-  font-size: 32px;
-  margin: 0 0 20px;
+  font-family: 'Roboto Regular';
+  font-weight: 400;
+  font-size: 1.5em;
+  line-height: 1em;
+
+  &.display {
+    font-family: 'Roboto Thin';
+    color: $grey800;
+    font-weight: 100;
+    font-size: 3em;
+  }
+
+  &.light {
+    font-family: 'Roboto Light';
+    font-weight: 300;
+    font-size: 1.5em;
+  }
+
 }
 
 h2 {
-  font-size: 28px;
-  margin: 0 0 20px;
+  font-family: 'Roboto Regular';
+  font-weight: 400;
+  font-size: 1.25em;
+  line-height: 1em;
 }
 
 h3 {
-  font-size: 22px;
-  margin: 0 0 10px;
+  font-family: 'Roboto Medium';
+  font-weight: 500;
+  font-size: 1em;
+  line-height: 1em;
 }
 
 h4 {
-  font-size: 14px;
-  font-weight: 700;
-  text-transform: uppercase;
-  margin-bottom: 5px;
-}
-
-h5 {
-  font-size: 13px;
-  margin-bottom: 5px;
-}
-
-h6 {
-  font-size: 12px;
+  font-family: 'Roboto Medium';
+  font-weight: 500;
+  font-size: 0.813em;
+  line-height: 1em;
 }
 
 ol, ul {
@@ -112,20 +122,19 @@ dd {
 }
 
 hr {
-  margin: 0 0 $base-line-height;
+  margin: $base-line-height 0 $base-line-height 0;
   border: 0;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid $grey300;
 }
 
 code {
     overflow: auto;
     padding: 0 5px 1px;
-    background: #f1f1f1;
+    background: #f5f5f5;
     margin: 0 2px;
     white-space: nowrap;
     word-wrap: normal;
-    font-size: 12px;
+    font-size: 1em;
     border-radius: 3px;
   }
 
@@ -141,48 +150,56 @@ code {
   pre {
     display:block;
     overflow: auto;
-    background: #f1f1f1;
     padding: 5px 10px;
+    background: #eee;
     white-space: pre;
     word-wrap: normal;
     border-radius: 3px;
+    border: 1px #e0e0e0 solid;
   }
 
 // Typography Classes
 
 .rs-page-title {
-  color: $red;
-  @extend h2;
+  @extend h1.display;
 }
 
 .rs-sidebar {
   h3 {
-    margin: 0 0 20px;
+    @extend h1.light;
+    margin-top: 2.8em;
   }
 
   h4 {
-    margin-bottom: 3px;
+    @extend h3;
+    margin-top: 0;
+    margin-bottom: 0.25em;
   }
 
   p {
-    color: #666;
+    color: $grey900;
   }
 
   hr {
-    margin: 20px 0;
+    margin: 1.5em 0;
+    border: none;
+    border-top: 1px $grey400 solid;
   }
 
   ul {
-    margin: 0 0 10px 25px;
+    margin: 0 0 0.625em 1.5em;
     padding: 0;
   }
 
   li {
-    margin-bottom: 5px;
+
+    a {
+      @extend .small;
+    }
   }
 
   pre, code {
-    background: $white;
+    background: $grey0;
   }
 
   pre code {
