refactor(canon css): changes fonts from source sans to roboto

--- a/lib/stylesheets/canon/_custom-fonts.scss
+++ b/lib/stylesheets/canon/_custom-fonts.scss
@@ -1,7 +1,7 @@
-@include font-face('Source Sans Pro', 'SourceSansPro-Light-webfont', 'SourceSansProLight', 200);
+@include font-face('Roboto Thin', 'Roboto-Thin-webfont', 'robotothin');
 
-@include font-face('Source Sans Pro', 'SourceSansPro-Regular-webfont', 'SourceSansProRegular', 400);
+@include font-face('Roboto Light', 'Roboto-Light-webfont', 'robotolight');
 
-@include font-face('Source Sans Pro', 'SourceSansPro-Semibold-webfont', 'SourceSansProSemibold', 600);
+@include font-face('Roboto Regular', 'Roboto-Regular-webfont', 'robotoregular');
 
-@include font-face('Source Sans Pro', 'SourceSansPro-Bold-webfont', 'SourceSansProBold', 700);
+@include font-face('Roboto Medium', 'Roboto-Medium-webfont', 'robotomedium');
