--- a/lib/stylesheets/canon/_settings.scss
+++ b/lib/stylesheets/canon/_settings.scss
@@ -1,89 +1,89 @@
+// Color Palette
+
+// PRIMARY COLORS
+
+// CYAN
+$cyan50: #E4F9F9;
+$cyan100: #B6E3EB;
+$cyan500: #16B9D4;
+$cyan700: #0E94A6;
+$cyan900: #0C7C84;
+
+//BLUE
+$blue50: #E1EEF9;
+$blue100: #BBDEFB;
+$blue500: #3391FF;
+$blue700: #0D74D1;
+$blue900: #0D47A1;
+
+//MAGENTA
+$magenta50: #FCE0EB;
+$magenta100: #F8BBD0;
+$magenta500: #EC407A;
+$magenta700: #C2185B;
+$magenta900: #A5134E;
+
+//PURPLE
+$purple50: #ADB7DD;
+$purple100: #6676BC;
+$purple500: #3B44A9;
+$purple700: #2E3187;
+$purple900: #232968;
+
+//ORANGE
+$orange50: #F8E1BB;
+$orange100: #FDD179;
+$orange500: #F57C00;
+$orange700: #DD6105;
+$orange900: #C15206; 
+
+// ALERT COLORS
+
+//GREEN
+$green500: #C8E6C9;
+$green700: #4CAF51;
+$green900: #2E7D32;
+
+//YELLOW
+$yellow500: #FFF9C4;
+$yellow700: #FFEB3B;
+$yellow900: #FBC02D;
+
+//RED
+$red500: #FFCDD2;
+$red700: #F44336;
+$red900: #D32F2F; 
+
+// GREYSCALE COLORS
+$grey0: #fff;
+$grey25: #fafafa;
+$grey50: #f5f5f5;
+$grey100: #eee;
+$grey200: #e7e7e7;
+$grey300: #e0e0e0;
+$grey400: #d8d8d8;
+$grey500: #bdbdbd;
+$grey600: #9e9e9e;
+$grey700: #757575;
+$grey800: #616161;
+$grey900: #424242;
+$grey950: #333;
+$grey975: #212121;
+$grey1000: #000;
+
+
+
 // Path Settings
 $canon-font-path: '' !default;
 $canon-image-path: '' !default;
 
-// Color Palette
-
-// B&W
-
-$black: #000;
-$white: #fff;
-
-$grey50: #e7e7e7;
-$grey100: #d8d8d8;
-$grey150: #e1e1e1;
-$grey175: #f5f5f5;
-$grey200: #ddd;
-$grey250: #d3d3d3;
-$grey300: #ccc;
-$grey400: #999;
-
-// Grey that can be used on all white backgrounds
-$grey500: #666;
-$grey600: #333;
-
-// Red
-$red: #c40022;
-
-$red5: #faf2f2;
-$red10: #f8ebeb;
-
-$red50: #f8dfe3;
-$red100: #de7083;
-$red200: #d81436;
-$red300: #ce0a2c;
-$red400: #c40022;
-$red500: #b50013;
-$red600: #a60004;
-
-// Yellow
-$yellow: #ff9d00;
-
-$yellow5: #fdf8f2;
-$yellow10: #fcf2e5;
-
-$yellow50: #ffedcf;
-$yellow100: #ffd477;
-$yellow200: #ffbb1e;
-$yellow300: #ffac0f;
-$yellow400: #ff9d00;
-$yellow500: #f08e00;
-$yellow600: #e17f00;
-
-// Green
-$green: #00a96d;
-
-$green5: #f2f9f6;
-$green10: #e5f3eD;
-
-$green50: #cfefe4;
-$green100: #72d6b3;
-$green200: #14bd81;
-$green300: #0ab377;
-$green400: #00a96d;
-$green500: #009a5e;
-$green600: #008b4f;
-
-// Blue
-$blue: #1e6ec1;
-
-$blue5: #f3f7fb;
-$blue10: #ecf2f9;
-
-$blue50: #d5e4f3;
-$blue100: #84b3e4;
-$blue200: #3282d5;
-$blue300: #2878cb;
-$blue400: #1e6ec1;
-$blue500: #1464b7;
-$blue600: #0a5aad;
 
 // Base
 
-$base-font-family: 'Helvetica Neue', sans-serif;
-$base-font-size: 13px;
-$base-line-height: 20px;
-$alt-font-family: 'Source Sans Pro', $base-font-family;
+$base-font-family: 'Roboto Regular', sans-serif;
+$base-font-size: 1em;
+$base-line-height: 1.5em;
+$alt-font-family: 'Times New Roman';
 
 // The Grid
 
@@ -107,29 +107,31 @@ $container-style: fluid;
 
 // Breakpoints
 $small: 767px;
-$small-padding: 20px;
+$small-padding: 0.875em;
 $medium: 1030px;
-$medium-padding: 30px;
+$medium-padding: 1.25em;
 $large: 1600px;
-$large-padding: 40px;
+$large-padding: 2.5em;
 $xlarge: 1920px;
-$xlarge-padding: 60px;
+$xlarge-padding: $large-padding;
 
 
 // Layout
 
-$app-nav-primary-height: 74px;
-$app-nav-secondary-height: 35px;
-$app-nav-utility-height: 40px;
+$app-nav-primary-height: 4em;
+$app-nav-secondary-height: 2.25em;
+$app-nav-utility-height: 2.75em;
 $app-header-height: $app-nav-primary-height + $app-nav-utility-height;
-$app-footer-height: 35px;
-$nav-branding-width: 132px;
+$app-footer-height: 2.5em;
+$nav-branding-width: 8.25em;
+$rs-sidebar-width: 15em;
+$rs-sidebar-pull-right-width: 18em;
 
 // Patterns
 
 $nav-primary-link: #888;
 $nav-primary-link-hover: $grey600;
-$nav-primary-link-active: $red;
+$nav-primary-link-active: $grey0;
 
 // Z-index
 $zindexModal: 1230;
