--- a/lib/stylesheets/canon/patterns/_cascade.scss
+++ b/lib/stylesheets/canon/patterns/_cascade.scss
@@ -1,8 +1,8 @@
 /* cascade */
-$cascade-short-height: 200px;
-$cascade-default-height: 400px;
-$cascade-tall-height: 600px;
-$cascade-header-height: 20px;
+$cascade-short-height: 10em;
+$cascade-default-height: 25em;
+$cascade-tall-height: 38em;
+$cascade-header-height: 1.625em;
 
 
 .rs-cascade {
@@ -10,7 +10,17 @@ $cascade-header-height: 20px;
   overflow: hidden;
   display: inline-block;
   position: relative;
-  height: 400px;
+  width: 100%;
+
+  h1,h2,h3,h4 {
+    margin-top: 0;
+  }
+
+  p {
+    @extend .small;
+  }
+
+  min-height: 10em;
 
   .rs-overlay {
     margin: 0;
@@ -18,14 +28,22 @@ $cascade-header-height: 20px;
   }
 
   .rs-overlay-content {
-    padding: 0 30px;
+    padding: 0 2em;
+  }
+
+  .rs-loading-indicator {
+    width: 24px;
+    height: 24px;
+  }
+
+  .rs-icon-error-indicator {
+    margin-right: 0.25em;
   }
 }
 
 .rs-cascade-column {
   float: left;
-  height: 100%;
-  min-width: 150px;
+  min-width: 9em;
   overflow-x: hidden;
   overflow-y: hidden;
 
@@ -42,25 +60,25 @@ $cascade-header-height: 20px;
   width: 100%;
   border-bottom: 1px solid $grey300;
   border-left: 1px solid $grey300;
-  background: $white;
   height: $cascade-header-height;
   overflow: hidden;
-  padding: 0 10px;
-
+  padding: 0 0.875em;
+  @extend .small;
+  color: $grey800;
 }
 
 .rs-cascade-column-content {
   border-left: 1px solid $grey300;
   height: $cascade-default-height - $cascade-header-height - 1;
-
   width: 100%;
-  min-width: 150px;
+  min-width: 10em;
   position: relative;
   overflow-x: hidden;
   overflow-y: auto;
+  outline: none;
 
   .rs-inner {
-    padding: 20px;
+    padding: 1.25em;
     margin: 0px;
   }
 }
@@ -73,27 +91,48 @@ $cascade-header-height: 20px;
 
 .rs-cascade-list-item {
   padding: 0;
+
+  .rs-icon {
+    @extend .rs-pull-left;
+    margin-right: 0.5em;
+    color: $grey600;
+  }
+
+  .rs-cascade-arrow {
+    margin-top: 0.25em;
+    margin-right: 0;
+    font-size: 0.5em;
+    color: $grey500;
+    @extend .rs-pull-right;
+    @extend .rs-icon;
+    @extend .rs-icon-arrow-right;
+  }
+
   &:hover,
   &.hover {
     .rs-cascade-list-item-content {
-      background-color: $grey175;
+      background-color: $grey100;
       text-decoration: none;
     }
 
+    .rs-cascade-list-item-label {
+      color: $grey800;
+    }
+
     .rs-cascade-arrow {
-      @include sprite($arrow-right-c0c0c0);
+      color: $grey800;
     }
   }
   &.disabled,
   &.disabled:hover,
   &.disabled.hover {
     .rs-cascade-list-item-content {
-      background-color: $white;
       cursor: default;
+      background-color: transparent;
     }
 
     .rs-cascade-list-item-label {
-      color: $grey300;
+      color: $grey400;
     }
 
     .rs-cascade-arrow {
@@ -102,39 +141,29 @@ $cascade-header-height: 20px;
   }
   &.selected {
     .rs-cascade-list-item-content {
-      background-color: $blue;
+      background-color: $grey200;
     }
     
-    .rs-cascade-list-item-label {
-      color: #fff;
-    }
-
-    .rs-cascade-arrow {
-      @include sprite($arrow-right-fff);
+    .rs-cascade-list-item-label,
+    .rs-cascade-arrow  {
+      color: $grey975;
     }
   }
 }
 
 .rs-cascade-list-item-content {
-  padding: 10px;
+  padding: 0.875em;
   cursor: pointer;
   display: block;
 }
 
 .rs-cascade-list-item-label {
   @extend .rs-truncate;
-  color: $grey600;
-}
-
-.rs-cascade-arrow {
-  margin-top: 3px;
-  @extend .rs-pull-right;
-  @include icon;
-  @include sprite($arrow-right-ccc);
+  color: $grey700;
 }
 
 .rs-cascade-message {
-  height: 20px;
+  height: 1.25em;
   text-align: center;
   color: $grey500;
   bottom: 0;
@@ -150,27 +179,13 @@ $cascade-header-height: 20px;
 .rs-cascade-short {
   height: $cascade-short-height;
   .rs-cascade-column-content {
-    height: $cascade-short-height - $cascade-header-height - 1;
+    height: $cascade-short-height - $cascade-header-height;
   }
 }
 
 .rs-cascade-tall {
   height: $cascade-tall-height;
   .rs-cascade-column-content {
-    height: $cascade-tall-height - $cascade-header-height - 1;
+    height: $cascade-tall-height - $cascade-header-height;
   }
-}
-.rs-cascade-list-item-icon {
-  .rs-cascade-list-item-content {
-    padding-left: 35px;
-    background-repeat: no-repeat;
-    background-position: 10px center;
-    background-size: 20px 20px;
-    outline:none;
-  }
-
-  &.generic .rs-cascade-list-item-content {
-    background-image: image-url('icon-generic-20.png');
-  }
-
 }
