--- a/lib/stylesheets/canon/patterns/_forms.scss
+++ b/lib/stylesheets/canon/patterns/_forms.scss
@@ -9,8 +9,8 @@ legend {
   display: block;
   width: 100%;
   margin: 0 0 $base-line-height;
-  font-size: 18px;
-  font-weight: bold;
+  font-size: 1.25em;
+  font-family: 'Roboto Medium';
   line-height: $base-line-height * 1.5;
 }
 
@@ -42,7 +42,9 @@ input[type="radio"] {
 
 label {
   display: block;
-  margin: 0 0 5px;
+  margin: 0;
+  line-height: 1.5em;
+  padding: 0.25em 0;
 }
 
 label:after {
@@ -58,7 +60,6 @@ input[type="file"],
 select,
 textarea,
 .rs-input {
-  margin: 0 0 10px;
   vertical-align: middle;
 }
 
@@ -70,19 +71,21 @@ input[type="url"],
 select,
 textarea,
 .rs-input {
-  padding: 2px 4px;
-  height: 25px;
-  border: 1px solid $grey400;
+  // height: 1.5em;
+  border: 1px solid $grey500;
+  line-height: 1.5em;
+  height: 2em;
+  padding: 0.25em 0.5em;
+  border-radius: 2px;
+  box-shadow: none;
 
   @include inline-block;
-  border-radius: 3px;
+  border-radius: 2px;
 
   &:focus,
   &.focus {
-    background-color: #f1f6ff;
     outline: none;
-
-    box-shadow: 0 0 0 2px $blue400;
+    box-shadow: 0 0 0 2px $blue500;
   }
 
   &[readonly],
@@ -91,7 +94,7 @@ textarea,
     margin-left: 0;
     margin-right: 0;
     color: #999;
-    background-color: $white;
+    background-color: $grey0;
     border: 1px solid $grey300;
   }
 }
@@ -104,12 +107,10 @@ input[type="url"],
 textarea,
 .rs-input {
   box-sizing: border-box;
-  box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.15);
 
   &:focus,
   &.focus {
     border-color: rgba(0, 0, 0, 0.15);
-    box-shadow: 0 0 0 2px $blue400, inset 0 1px 3px 0 rgba(0, 0, 0, 0.15);
   }
 }
 
@@ -174,12 +175,16 @@ textarea {
   margin-right: 10px;
 }
 
+.rs-control-group {
+  margin-bottom: 0.875em;
+}
+
 /* Create/Horizontal Forms */
 .rs-form-horizontal,
 .rs-form-create {
-  .rs-control-group,
+  
   .rs-control-label {
-    margin-bottom: 10px;
+    margin-bottom: 0.875em;
   }
 
   .rs-control-group {
@@ -188,11 +193,10 @@ textarea {
 
   .rs-control-label {
     float: left;
-    margin-top: 2px;
   }
 
   .rs-controls-static {
-    padding-top: 2px;
+    padding-top: 3px;
   }
 
   input[type="text"],
@@ -207,7 +211,7 @@ textarea {
     margin-bottom: 0;
   }
 
-  @mixin set-form-control-labels($label-width: 160px, $value-margin-left: 20px){
+  @mixin set-form-control-labels($label-width: 10em, $value-margin-left: 1.25em){
     .rs-control-label {
       width: $label-width;
     }
@@ -227,27 +231,27 @@ textarea {
   @include set-form-control-labels();
 
   &.rs-form-xsmall {
-    @include set-form-control-labels(60px);
+    @include set-form-control-labels(4.5em);
   }
 
   &.rs-form-small {
-    @include set-form-control-labels(80px);
+    @include set-form-control-labels(6em);
   }
 
   &.rs-form-medium {
-    @include set-form-control-labels(100px);
+    @include set-form-control-labels(7.5em);
   }
 
   &.rs-form-large {
-    @include set-form-control-labels(120px);
+    @include set-form-control-labels(9em);
   }
 
   &.rs-form-xlarge {
-    @include set-form-control-labels(150px);
+    @include set-form-control-labels(11.25em);
   }
 
   &.rs-form-xxlarge {
-    @include set-form-control-labels(180px);
+    @include set-form-control-labels(13.5em);
   }
 }
 
@@ -260,7 +264,7 @@ textarea {
 
   .rs-control-group,
   .rs-control-label {
-    margin-bottom: 20px;
+    margin-bottom: 1.5em;
   }
 
   .rs-control-label {
@@ -276,30 +280,30 @@ textarea {
 
     .rs-create-value,
     .rs-quiet {
-      color: $red;
+      color: $red700;
     }
   }
 
+  label.rs-detail-key,
   .rs-detail-key {
-    color: $grey600;
+    padding: 0;
+    cursor: default;
   }
-
-  .rs-detail-value {
-    .rs-key-divider {
-      color: $grey600;
-    }
-  }
+  
 }
 
 /* Messaging */
 .rs-help-block {
-  color: lighten($grey600, 20%);
+  @extend .small;
+  color: $grey700;
+  margin-top: 0.25em;
 }
 
 .rs-help-inline,
 .rs-validation-inline {
   display: inline-block;
-  margin-left: 5px;
+  margin-left: 0.25em;
+  vertical-align: middle;
 }
 
 .rs-help-block,
@@ -310,24 +314,22 @@ textarea {
 .rs-validation-inline,
 .rs-validation-block {
   position: relative;
-  padding-left: 20px;
+  padding-left: 1.25em;
 
   & > .rs-validation-indicator {
-    position: absolute;
-    top: 3px;
-    left: 0;
+    @extend .rs-icon;
+    margin-right: 0.5em;
   }
 }
 
 .rs-control-group.success {
   .rs-validation-inline,
   .rs-validation-block {
-    color: $green;
+    color: $green700;
   }
 
   .rs-validation-indicator {
-    @include icon;
-    @include sprite($ok-circle);
+    @extend .rs-icon-check-circle;
   }
 }
 
@@ -340,12 +342,11 @@ textarea {
   select,
   textarea,
   .rs-input {
-    border-color: $red;
+    border-color: $red700;
 
     &:focus,
     &.focus {
-      background-color: #fff6f6;
-      box-shadow: 0 0 0 2px $red;
+      box-color: $red700;
     }
   }
 
@@ -358,15 +359,14 @@ textarea {
   .rs-input {
     &:focus,
     &.focus {
-      border-color: rgba(0, 0, 0, 0.15);
-      box-shadow: 0 0 0 2px $red, inset 0 1px 3px 0 rgba(0, 0, 0, 0.15);
+      border-color: $red700;
     }
   }
 
   select {
     &:focus,
     &.focus {
-      border-color: #999;
+      border-color: $red700;
     }
   }
 
@@ -375,11 +375,10 @@ textarea {
   .rs-help-block,
   .rs-validation-inline,
   .rs-validation-block {
-    color: $red;
+    color: $red700;
   }
 
   .rs-validation-indicator {
-    @include icon(13px, 12px);
-    @include sprite($exclamation-sign);
+    @extend .rs-icon-error;
   }
 }
